    * Fix pointer marshalling in srvsvc parsing code.
    * BUG 4630: Fix conversion of 8 byte time_t and NT_TIME values.
    * Ensure that if we're blocked on a POSIX lock we know nothing
      about that we retry the lock every 10 seconds instead of waiting
      for the standard select timeout.
    * BUG 4637: Fix samlogon reply regression that broke domain logons.


o   Alexander Bokovoy <ab@samba.org>
    * Add -pie support to Python's setup.py.
    * Strip STYPE_TEMPORARY and STYPE_HIDDEN when printing share
      listing from 'net rap shares".
    * Fix argument parsing in "net rap server domain".
   

o   Gerald (Jerry) Carter <jerry@samba.org>
    * BUG 4616: Don't return a dns or forest name when replying to the
      DsGetPrimaryRoleInfo() and configured for security = domain.
    * Trim noise by removing redundant WARNING log message that would 
      flood at log level 2. 
    * Fix truncation of supplementary Unix groups when using "force group".


o   Guenther Deschner <gd@samba.org>
    * Always fallback to NTLM authentication in pam_winbind when the 
      user's account has UF_DONT_REQUIRE_PREAUTH set.


o   Steve French <sfrench@us.ibm.com> 
    * Valgrind fixes in mount.cifs.


o   Volker Lendecke <vl@samba.org>
    * Fix crash bug in the Solaria ACL VFS module caused by
      uninitialized variables.


o   Derrell Lipman <derrell@samba.org>
    * BUG 4601: Fix smbc_getxattr() to properly return the required
      size of the buffer needed to contain the extended attributes.
    * BUG 4599: Fix failure when setting attributes.
    * BUG 4634: Type of the size parameter to getpeername in
      libsmbclient code was wrong.


o   Jim McDonough <jmcd@us.ibm.com>
    * BUG 4630: Fix special case of unix_to_nt_time() for TIME_T_MAX
      and the output from http_timestring().


o   Stefan Metzmacher <metze@samba.org>
    * Merge gdb_backtrace script changes form SAMBA_4_0.


o   Lars Mueller <lars@samba.org>